--- a/packages/prometheus-nginx/PKGBUILD
+++ b/packages/prometheus-nginx/PKGBUILD
@@ -38,7 +38,7 @@ conflicts=(
 )
 
 backup=(
-   "${pkgdir}//etc/zextras/service-discover/${pkgname}.json"
+   "/etc/zextras/service-discover/${pkgname}.json"
 )
 
 package() {
