--- a/packages/prometheus-postgres/PKGBUILD
+++ b/packages/prometheus-postgres/PKGBUILD
@@ -40,8 +40,8 @@ conflicts=(
 )
 
 backup=(
-  "${pkgdir}/etc/default/${pkgname}"
-  "${pkgdir}/opt/zextras/common/etc/prometheus/${pkgname}.yml"
+  "/etc/default/${pkgname}"
+  "/opt/zextras/common/etc/prometheus/${pkgname}.yml"
 )
 
 package() {
