--- a/packages/prometheus-openldap/PKGBUILD
+++ b/packages/prometheus-openldap/PKGBUILD
@@ -72,13 +72,13 @@ postinst() {
   systemd-sysusers >/dev/null || true
   systemd-tmpfiles --create >/dev/null || true
 
-  source /opt/zextras/bin/zmshutil || exit 1
-  zmsetvars
-    
-  echo "ldapAddr: $ldap_host:$ldap_port" > /opt/zextras/common/etc/prometheus/${pkgname}.yml
-  echo "ldapUser: $zimbra_ldap_userdn >> /opt/zextras/common/etc/prometheus/${pkgname}.yml
-  echo "ldapPass: $zimbra_ldap_password  >> /opt/zextras/common/etc/prometheus/${pkgname}.yml
-  echo "interval: 1m" >> /opt/zextras/common/etc/prometheus/${pkgname}.yml
+  #source /opt/zextras/bin/zmshutil || exit 1
+  #zmsetvars
+  #  
+  #echo "ldapAddr: $ldap_host:$ldap_port" > /opt/zextras/common/etc/prometheus/${pkgname}.yml
+  #echo "ldapUser: $zimbra_ldap_userdn >> /opt/zextras/common/etc/prometheus/${pkgname}.yml
+  #echo "ldapPass: $zimbra_ldap_password  >> /opt/zextras/common/etc/prometheus/${pkgname}.yml
+  #echo "interval: 1m" >> /opt/zextras/common/etc/prometheus/${pkgname}.yml
   
   if [ -d /run/systemd/system ]; then
     systemctl daemon-reload >/dev/null 2>&1 || :
