--- a/packages/prometheus-openldap/PKGBUILD
+++ b/packages/prometheus-openldap/PKGBUILD
@@ -51,6 +51,9 @@ package() {
   install -Dm755 openldap_exporter-linux-amd64 \
     "${pkgdir}/opt/zextras/common/bin/${pkgname}"
 
+  install -Dm755 "${srcdir}/set-${pkgname}.sh" \
+    "${pkgdir}/opt/zextras/common/bin/set-${pkgname}.sh"
+
   install -Dm644 "${srcdir}/${pkgname}.service" \
     "${pkgdir}/usr/lib/systemd/system/${pkgname}.service"
 	
@@ -74,14 +77,8 @@ postinst() {
   systemd-sysusers >/dev/null || true
   systemd-tmpfiles --create >/dev/null || true
 
-  source /opt/zextras/bin/zmshutil || exit 1
-  zmsetvars
-    
-  echo "ldapAddr: $ldap_host:$ldap_port" > /opt/zextras/common/etc/prometheus/${pkgname}.yml
-  echo "ldapUser: $zimbra_ldap_userdn >> /opt/zextras/common/etc/prometheus/${pkgname}.yml
-  echo "ldapPass: $zimbra_ldap_password  >> /opt/zextras/common/etc/prometheus/${pkgname}.yml
-  echo "interval: 1m" >> /opt/zextras/common/etc/prometheus/${pkgname}.yml
-  
+  /opt/zextras/common/bin/set-${pkgname}.sh 	
+
   if [ -d /run/systemd/system ]; then
     systemctl daemon-reload >/dev/null 2>&1 || :
     systemctl enable ${pkgname}.service >/dev/null 2>&1 || :
