--- a/packages/prometheus-mysqld/PKGBUILD
+++ b/packages/prometheus-mysqld/PKGBUILD
@@ -20,10 +20,12 @@ sources=(
   "${pkgname}.service"
   "${pkgname}.cnf"
   "${pkgname}-consul.json"
+  "set-${pkgname}.sh"
   "prometheus.sysusers"
 )
 
 hashsums=(
+  "skip"
   "skip"
   "skip"
   "skip"
@@ -75,13 +77,7 @@ postinst() {
   systemd-sysusers >/dev/null || true
   systemd-tmpfiles --create >/dev/null || true
 
-  #source /opt/zextras/bin/zmshutil || exit 1
-  #zmsetvars
-  #
-  #echo "user= $zimbra_mysql_user" >> /opt/zextras/common/etc/prometheus/${pkgname}.cnf
-  #echo "password= $mysql_zimbra_password" >> /opt/zextras/common/etc/prometheus/${pkgname}.cnf
-  #echo "host= $mysql_bind_address"  >> /opt/zextras/common/etc/prometheus/${pkgname}.cnf
-  #echo "port= $mysql_port" >> /opt/zextras/common/etc/prometheus/${pkgname}.cnf
+  /opt/zextras/common/bin/set-${pkgname}.sh 	
 
   if [ -d /run/systemd/system ]; then
     systemctl daemon-reload >/dev/null 2>&1 || :
