--- a/packages/prometheus-mysqld/PKGBUILD
+++ b/packages/prometheus-mysqld/PKGBUILD
@@ -42,18 +42,20 @@ conflicts=(
   'prometheus-mysqld-exporter'
 )
 
-backup(
-	"/etc/default/${pkgname}"
-    "/opt/zextras/common/etc/prometheus/${pkgname}.cnf"
-)
+#backup(
+#	"/etc/default/${pkgname}"
+#    "/opt/zextras/common/etc/prometheus/${pkgname}.cnf"
+#)
 
 package() {
   cd "${srcdir}/mysqld_exporter-${pkgver}.linux-amd64"
-  echo "${srcdir}/mysqld_exporter-${pkgver}.linux-amd64"
   
   install -Dm755 mysqld_exporter \
     "${pkgdir}/opt/zextras/common/bin/${pkgname}"
-
+	
+  install -Dm755 "${srcdir}/set-${pkgname}" \
+    "${pkgdir}/opt/zextras/common/bin/set-${pkgname}.sh"
+	
   install -Dm644 "${srcdir}/${pkgname}.service" \
     "${pkgdir}/usr/lib/systemd/system/${pkgname}.service"
 	
