Always mysqld empty

--- a/packages/prometheus-mysqld/PKGBUILD
+++ b/packages/prometheus-mysqld/PKGBUILD
@@ -53,7 +53,7 @@ package() {
   install -Dm755 mysqld_exporter \
     "${pkgdir}/opt/zextras/common/bin/${pkgname}"
 	
-  install -Dm755 "${srcdir}/set-${pkgname}" \
+  install -Dm755 "${srcdir}/set-${pkgname}.sh" \
     "${pkgdir}/opt/zextras/common/bin/set-${pkgname}.sh"
 	
   install -Dm644 "${srcdir}/${pkgname}.service" \
