--- a/packages/prometheus-node/PKGBUILD
+++ b/packages/prometheus-node/PKGBUILD
@@ -16,9 +16,9 @@ priority="optional"
 arch="amd64"
 sources=(
   "https://github.com/prometheus/node_exporter/releases/download/v${pkgver}/node_exporter-${pkgver}.linux-amd64.tar.gz"
-  "node.default"
-  "node-consul.json"
-  "node.service"
+  "${pkgname}.default"
+  "${pkgname}-consul.json"
+  "${pkgname}.service"
   "prometheus.sysusers"
 )
 hashsums=(
@@ -47,14 +47,14 @@ package() {
   install -Dm755 node_exporter \
     "${pkgdir}/opt/zextras/common/bin/${pkgname}"
 
-  install -Dm644 "${srcdir}"/node.service \
+  install -Dm644 "${srcdir}"/${pkgname}.service \
     "${pkgdir}/usr/lib/systemd/system/${pkgname}.service"
-  install -Dm644 "${srcdir}"/node.default \
+  install -Dm644 "${srcdir}"/${pkgname}.default \
     "${pkgdir}/etc/default/${pkgname}"
 	
   install -Dm644 "${srcdir}"/prometheus.sysusers \
     "${pkgdir}/usr/lib/sysusers.d/${pkgname}".conf	
-  install -Dm644 "${srcdir}"/node-consul.json \
+  install -Dm644 "${srcdir}"/${pkgname}-consul.json \
     "${pkgdir}/etc/zextras/service-discover/${pkgname}.json"	
 }
 
