--- a/packages/prometheus-nginx/carbonio-prometheus-nginx-exporter-consul.json
+++ b/packages/prometheus-nginx/carbonio-prometheus-nginx-exporter-consul.json
@@ -1,6 +1,7 @@
 {
   "service": {
     "name": "carbonio-prometheus-nginx-exporter",
+    "tags": ["prometheus-exporter"],
     "port": 9113
   }
 }
