Added daemons to process exporter

--- a/packages/prometheus-process/carbonio-prometheus-process-exporter.yml
+++ b/packages/prometheus-process/carbonio-prometheus-process-exporter.yml
@@ -16,3 +16,10 @@ process_names:
       - soffice.bin
       - sshd
       - zm*
+      - melt
+      - janus
+      - memcached
+      - envoy
+      - vector
+      - carbonio*
+
