--- a/packages/prometheus-alertmanager/PKGBUILD
+++ b/packages/prometheus-alertmanager/PKGBUILD
@@ -42,34 +42,28 @@ conflicts=(
 )
 
 backup=(
-    "/opt/zextras/common/etc/prometheus/alertmanager.yml"
-    "/opt/zextras/common/etc/prometheus/email.tmpl"
-    "/opt/zextras/common/etc/prometheus/alert_rules.yml"
+    "/etc/carbonio/${pkgname}/alertmanager.yml"
+    "/etc/carbonio/${pkgname}/email.tmpl"
+    "/etc/carbonio/${pkgname}/alert_rules.yml"
 )
 
 package() {
   cd "${srcdir}/alertmanager-${pkgver}.linux-amd64"
   
-  install -Dm755 alertmanager \
-    "${pkgdir}/opt/zextras/common/bin/alertmanager"
-  install -Dm755 amtool \
-    "${pkgdir}/opt/zextras/common/bin/amtool"
+  install -Dm 755 ${pkgname} "${pkgdir}/usr/bin/carbonio/${pkgname}"
+  install -Dm 755 alertmanager "${pkgdir}/usr/bin/carbonio/${pkgname}/alertmanager"
+  install -Dm 755 amtool "${pkgdir}/usr/bin/carbonio/${pkgname}/amtool"
 
-  install -dm750 -o210 -g210 "${pkgdir}/var/lib/alertmanager/data"
-  install -dm750 -o210 -g210 "${pkgdir}/opt/zextras/common/etc/prometheus/email-templates"
+  install -dm 750 -o210 -g210 "${pkgdir}/var/lib/alertmanager/data"
+  install -dm 750 -o210 -g210 "${pkgdir}/etc/carbonio/${pkgname}/email-templates"
 
-  install -Dm640 -g210 "${srcdir}/alertmanager.yml" \
-    "${pkgdir}/opt/zextras/common/etc/prometheus/alertmanager.yml"
-  install -Dm640 -g210 "${srcdir}/email.tmpl" \
-    "${pkgdir}/opt/zextras/common/etc/prometheus/email.tmpl"
-  install -Dm640 -g210 "${srcdir}/alert_rules.yml" \
-    "${pkgdir}/opt/zextras/common/etc/prometheus/alert_rules.yml"
-  install -Dm644 "${srcdir}"/${pkgname}.service \
-    "${pkgdir}/usr/lib/systemd/system/${pkgname}.service"
-  install -Dm644 "${srcdir}"/${pkgname}.default \
-    "${pkgdir}/etc/default/${pkgname}"
-  install -Dm644 "${srcdir}"/prometheus.sysusers \
-    "${pkgdir}/usr/lib/sysusers.d/${pkgname}".conf	
+  install -Dm 644 -g210 "${srcdir}/alertmanager.yml"  "${pkgdir}/etc/carbonio/${pkgname}/alertmanager.yml"
+  install -Dm 644 -g210 "${srcdir}/email.tmpl"  "${pkgdir}/etc/carbonio/${pkgname}/email.tmpl"
+  install -Dm 644 -g210 "${srcdir}/alert_rules.yml"  "${pkgdir}/etc/carbonio/${pkgname}/alert_rules.yml"
+  
+  install -Dm 644 "${srcdir}"/${pkgname}.service  "${pkgdir}/usr/lib/systemd/system/${pkgname}.service"
+  install -Dm 644 "${srcdir}"/${pkgname}.default  "${pkgdir}/etc/default/${pkgname}"
+  install -Dm 644 "${srcdir}"/prometheus.sysusers  "${pkgdir}/usr/lib/sysusers.d/${pkgname}.conf"	
 }
 
 
@@ -89,7 +83,7 @@ postinst() {
 
   echo "======================================================"
   echo "Carbonio Prometheus Alert Manager installed successfully!"
-  echo "You have to configure it in prometheus.yml"
+  echo "You can configure it in prometheus.yml"
   echo "======================================================"
 }
 
